Added upcoming matches to home page.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -10,4 +10,9 @@
 
 %section#frontpage-matches
   %h1 Kuukauden ottelut
-  = 'Otteluita...'
+  - @upcoming_matches.each do |match|
+    .entry
+      %h2= match
+      %meta
+        = "#{match.partition.season.section} |"
+        %time{:datetime => html5_datetime(match.start_time)}= match.start_time
