--- a/app/views/layouts/home.html.haml
+++ b/app/views/layouts/home.html.haml
@@ -24,5 +24,5 @@
     %footer= render :partial => 'layouts/footer'
 
   %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js"}
-  = javascript_tag %{!window.jQuery && document.write(unescape('%3Cscript src="/javascripts/jquery-1.4.3.min.js"%3E%3C/script%3E'))}
+  = javascript_tag %{!window.jQuery && document.write(unescape('%3Cscript src="/javascripts/jquery.min.js"%3E%3C/script%3E'))}
   = javascript_include_tag "jquery.jcarousel.min", "hoverIntent", "script"
