--- a/app/views/layouts/home.html.haml
+++ b/app/views/layouts/home.html.haml
@@ -20,7 +20,9 @@
     #container
       #top= render :partial => 'layouts/global_nav'
       #main-header= render :partial => 'layouts/header'
-      .center-wrapper#main= yield
+      .center-wrapper
+        %section#main= yield
+          
     %footer= render :partial => 'layouts/footer'
 
   %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js"}
