Link to a match only when there is a match report.

--- a/app/views/section/matches.html.haml
+++ b/app/views/section/matches.html.haml
@@ -3,7 +3,7 @@
   
 - @matches.each do |match|
   .entry
-    %h2= link_to "#{match} #{match.result}", match_path(match.partition.season.section.slug, match)
+    %h2= link_to_if match.report.length > 0, "#{match} #{match.result}", match_path(match.partition.season.section.slug, match)
     %meta
       %time{:datetime => html5_datetime(match.start_time)}= match.start_time
       = " | #{match.location}"
