--- a/app/views/layouts/_section_nav.html.haml
+++ b/app/views/layouts/_section_nav.html.haml
@@ -4,5 +4,5 @@
   %li= create_menu_item 'Ajankohtaista', :news
   %li= create_menu_item 'Vieraskirja', :guestbook
   %li= create_menu_item 'Ottelut', :matches
-  %li huu
+  %li= create_menu_item 'Linkit', :links
   %li hoo
