--- a/app/views/layouts/admin/_menu.html.haml
+++ b/app/views/layouts/admin/_menu.html.haml
@@ -1,7 +1,7 @@
 %ul
   %li= link_to 'Ajankohtaista', admin_news_index_path
   %li= link_to 'Kaudet', admin_seasons_path
-  %li= link_to 'Tilastot', admin_latest_standings_path
+  %li= link_to 'Sarjataulukko', admin_latest_standings_path
   %li= link_to 'Pistepörssi', admin_latest_statistics_path
   %li= link_to 'Vieraskirja', admin_comments_path
   %li= link_to 'Pelaajat', admin_members_path
