Added team feature to front-end.

--- a/app/views/layouts/_section_nav.html.haml
+++ b/app/views/layouts/_section_nav.html.haml
@@ -2,6 +2,7 @@
 
 %ul
   %li= create_menu_item 'Ajankohtaista', :news
+  %li= create_menu_item 'Joukkue', :team
   %li= create_menu_item 'Vieraskirja', :guestbook
   %li= create_menu_item 'Ottelut', :matches
   %li= create_menu_item 'Pistepörssi', :statistics
