Added standings feature to front-end.

--- a/app/views/layouts/_section_nav.html.haml
+++ b/app/views/layouts/_section_nav.html.haml
@@ -6,4 +6,5 @@
   %li= create_menu_item 'Vieraskirja', :guestbook
   %li= create_menu_item 'Ottelut', :matches
   %li= create_menu_item 'Pistepörssi', :statistics
+  %li= create_menu_item 'Sarjataulukko', :standings
   %li= create_menu_item 'Linkit', :links
