Contact info link.

--- a/app/views/layouts/_section_nav.html.haml
+++ b/app/views/layouts/_section_nav.html.haml
@@ -8,3 +8,4 @@
   %li= create_menu_item 'Pistepörssi', :statistics
   %li= create_menu_item 'Sarjataulukko', :standings
   %li= create_menu_item 'Linkit', :links
+  %li= create_menu_item 'Yhteystiedot', :contact_info
