Added identifier to dl element.

--- a/app/views/section/links.html.haml
+++ b/app/views/section/links.html.haml
@@ -2,7 +2,7 @@
   %h1 Linkit
   
 - @link_categories.each do |link_category|
-  %dl
+  %dl#links
     %dt= link_category
     - link_category.links.each do |link|
       %dd= link_to link, link.url, :rel => "nofollow"
