Added show member feature to front-end.

--- a/app/views/section/team.html.haml
+++ b/app/views/section/team.html.haml
@@ -5,11 +5,11 @@
   %h2 Pelaajat
   %ul
     - @players.each do |player|
-      %li= player
+      %li= link_to "#{player.number} #{player}", player_path(@section.slug, player)
 
 .parallel-col
   - if @coaches.count > 0
     %h2 Valmentajat
     %ul
       - @coaches.each do |coach|
-        %li= coach
+        %li= link_to coach, player_path(@section.slug, coach)
