--- a/app/views/admin/seasons/show.html.haml
+++ b/app/views/admin/seasons/show.html.haml
@@ -1,4 +1,4 @@
-%h1 Kausi #{@season}
+%h1 #{@season.section}: kausi #{@season}
 
 #contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_seasons_path
