Added section name to page headings.

--- a/app/views/admin/team_standings/edit_multiple.html.haml
+++ b/app/views/admin/team_standings/edit_multiple.html.haml
@@ -1,4 +1,4 @@
-%h1 Sarjataulukko kaudella #{@partition.season}
+%h1 #{@partition.season.section}: Sarjataulukko kaudella #{@partition.season}
 %h2 #{@partition}
 
 #contextNavi
