--- a/app/views/admin/link_categories/index.html.haml
+++ b/app/views/admin/link_categories/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Linkkikategoriat
+%h1 Linkit
 
 = section_selection
 #contextNavi
@@ -7,9 +7,7 @@
 
 %table
   %tr
-    %th
-    %th
-    %th
+    %th{:colspan => 3} Linkkikategoriat
 
   - @link_categories.each do |link_category|
     %tr
