--- a/app/views/admin/link_categories/show.html.haml
+++ b/app/views/admin/link_categories/show.html.haml
@@ -1,4 +1,4 @@
-%h1= @link_category
+%h1= "Linkkikategoria: #{@link_category}"
 
 #contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_link_categories_path 
@@ -8,7 +8,7 @@
   = link_to 'Muokkaa', edit_admin_link_category_path(@link_category)
   \|
   = link_to image_tag('add.png', :size => '16x16'), new_admin_link_category_link_path(@link_category)
-  = link_to 'Uusi linkki', new_admin_link_category_link_path(@link_category)
+  = link_to 'Luo uusi linkki', new_admin_link_category_link_path(@link_category)
   
 %table
   %tr
