--- a/app/views/admin/matches/index.html.haml
+++ b/app/views/admin/matches/index.html.haml
@@ -1,5 +1,4 @@
-%header
-  %h1 #{@partition}-ottelut kaudella #{@partition.season} 
+%h1 #{@partition.season.section}: #{@partition}-ottelut kaudella #{@partition.season} 
 
 %nav#contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_partition_path(@partition)
