--- a/app/views/admin/partitions/show.html.haml
+++ b/app/views/admin/partitions/show.html.haml
@@ -1,4 +1,4 @@
-%h1 #{@partition} kaudella #{@partition.season} 
+%h1 #{@partition.season.section}: #{@partition} kaudella #{@partition.season} 
 
 #contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_seasons_path
