--- a/app/views/admin/seasons/index.html.haml
+++ b/app/views/admin/seasons/index.html.haml
@@ -1,4 +1,5 @@
-%h1= 'Kaudet'
+%header
+  %h1= 'Tilastot ja joukkue'
 
 = section_selection
 
@@ -18,13 +19,13 @@
   %table
     %thead
       %tr
-        %th{:colspan => 3}= 'Toiminnot'
+        %th{:colspan => 3}= 'Kaudet'
     
     %tbody
       - for season in @seasons
         -season_row_class = cycle(:odd, :even)
         %tr{ :class => season_row_class }
-          %td.action= link_to season, admin_season_path(season)
+          %td= link_to season, admin_season_path(season)
           %td.action= link_to image_tag('pencil.png'), edit_admin_season_path(season), :title => 'Muokkaa'
           %td.action= link_to image_tag('cross.png'), admin_season_path(season), :title => 'Poista',
             :confirm => "Haluatko varmasti poistaa kauden \"#{season}\"?", :method => :delete
