--- a/app/views/admin/statistics/edit_multiple.html.haml
+++ b/app/views/admin/statistics/edit_multiple.html.haml
@@ -1,4 +1,4 @@
-%h1 #{@partition} pistepörssi kaudella #{@partition.season}
+%h1 #{@partition.season.section}: #{@partition} pistepörssi kaudella #{@partition.season}
 
 #contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_partition_path(@partition)
