--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -229,6 +229,7 @@ body, html {
 
 #container {
   min-height:100%;
+  background: url("/images/ISB-logo-background.png") no-repeat right 200px;
 }
 
 div.center-wrapper, aside.center-wrapper, nav.center-wrapper{
@@ -280,6 +281,7 @@ nav#section-nav {
   float:left;
   width:200px;
   margin:10px 10px 0 0;
+  background-color:#ffffff;
 }
 
 nav#section-nav h1 {
@@ -315,9 +317,12 @@ section#frontpage-matches, section#frontpage-news {
   margin-bottom:10px;
 }
 
+section, article#news {
+  background-color:#ffffff;
+}
+
 section#frontpage-matches {
   width:350px;
-  
 }
 
 section#frontpage-news {
