--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -41,7 +41,7 @@
         Ilmajoen Salibandy - Ikonit tarjoaa: 
         %a{:href => 'http://www.famfamfam.com/lab/icons/silk/'} Silk Icon Set by Mark James
       
-  %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.js"}
-  = javascript_tag %{!window.jQuery && document.write(unescape('%3Cscript src="/javascripts/jquery-1.4.4.min.js"%3E%3C/script%3E'))}
+  %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"}
+  = javascript_tag %{!window.jQuery && document.write(unescape('%3Cscript src="/javascripts/jquery.min.js"%3E%3C/script%3E'))}
   = javascript_include_tag "jquery-ui.min"
   = yield :javascript
