Add questions and answers feature to back-end. Delete Q&A feature not implemented yet.

--- a/app/views/admin/members/_form.html.haml
+++ b/app/views/admin/members/_form.html.haml
@@ -1,4 +1,6 @@
 = semantic_form_for @member, :url => url, :html => { :multipart => true } do |form|
+  
+  %h2 Perustiedot
   = form.inputs do
     = form.input :first_name, :label => 'Etunimi'
     = form.input :last_name, :label => 'Sukunimi'
@@ -10,7 +12,19 @@
       :collection => {'-' => Member::UNASSIGNED, 'Hyökkääjä' => Member::ATTACKER, 'Puolustaja' => Member::DEFENDER, 'Maalivahti' => Member::GOALIE}
     = image_tag @member.photo.url(:normal)
     = form.input :photo, :label => 'Kuva'
-      
   
+  %h2#questions Kysymykset
+  = form.semantic_fields_for :questions do |q|
+    = q.inputs do
+      = q.input :content, :label => "Kysymys"
+      = q.input :answer, :label => "Vastaus"
+
   = form.buttons do
     = form.commit_button :label => 'Tallenna'
+    
+  - content_for :javascript do
+    = javascript_include_tag "qa_item_handler.js"
+    :javascript
+      $(document).ready(function() {
+        questions = new QAItemHandler($('#questions'));
+      });
