--- a/app/views/admin/members/_form.html.haml
+++ b/app/views/admin/members/_form.html.haml
@@ -16,8 +16,8 @@
     %h2 Kysymykset
     = form.semantic_fields_for :questions do |q|
       = q.inputs do
-        = q.input :content, :label => "Kysymys"
-        = q.input :answer, :label => "Vastaus"
+        = q.input :content, :label => "Kysymys", :wrapper_html => { :class => "inline-input" }
+        = q.input :answer, :label => "Vastaus", :wrapper_html => { :class => "inline-input" }
 
   = form.buttons do
     = form.commit_button :label => 'Tallenna'
