Custom questions for members.

--- a/app/views/section/player.html.haml
+++ b/app/views/section/player.html.haml
@@ -25,3 +25,8 @@
       %li
         %strong Kätisyys:
         = "TO-DO"
+        
+      - for question in @member.questions
+        %li
+          %strong= question
+          = question.answer
