Implemented contact info edit in back-end.

--- a/app/views/admin/sections/_form.html.haml
+++ b/app/views/admin/sections/_form.html.haml
@@ -1,4 +1,4 @@
-- semantic_form_for @admin_section, :url => url do |form| 
+- semantic_form_for @section, :url => url do |form| 
   - form.inputs do
     = form.input :slug, :label => 'Slug'
     = form.input :name, :label => 'Name'
