Added pagination for back-end and front-end news.

--- a/app/views/section/news.html.haml
+++ b/app/views/section/news.html.haml
@@ -1,6 +1,8 @@
 %header
   %h1 Ajankohtaista
 
+= paginate @news
+
 - @news.each do |news_post|
   .entry
     %h2= link_to news_post, news_path(news_post)
